[gd_scene load_steps=3 format=3 uid="uid://cu6mupu6sae4k"]

[ext_resource type="Script" path="res://common/entities/player_experience/player_experience.gd" id="1_ceyvh"]
[ext_resource type="LabelSettings" uid="uid://cmbhe88x7xksl" path="res://assets/font/XP_label_settings.tres" id="2_arpf8"]

[node name="Experience_Player" type="CanvasLayer"]
layer = 0
script = ExtResource("1_ceyvh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.5
offset_right = 187.5
offset_bottom = 102.0
grow_horizontal = 2
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="XP" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "XP"
label_settings = ExtResource("2_arpf8")
horizontal_alignment = 2

[node name="Label_Experience" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current value"
label_settings = ExtResource("2_arpf8")
horizontal_alignment = 2

[node name="Label_Under_Experience" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "/"
label_settings = ExtResource("2_arpf8")

[node name="Label_Experience_required" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Required value"
label_settings = ExtResource("2_arpf8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 120

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label_Level_Text" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
text = "Level"
label_settings = ExtResource("2_arpf8")

[node name="Label_Level" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Current value
"
label_settings = ExtResource("2_arpf8")
